<resources>
    <string name="app_name">票房助手</string>
    <string name="download_data_path">/vipao/data</string>
    <string name="download_data">正在下载数据</string>
    <string name="unzip_data">正在解压数据</string>
    <string name="load_data">正在更新数据</string>
    <string name="alert_title">Vpiao提示</string>
    <string name="network_unable_msg">网络不可用，是否设置网络连接?</string>
    <string name="load_data_error_msg">更新数据错误</string>
    <string name="not_user_data">没有加载到用户数据，是否重新下载?(需要联网)</string>
    <string name="button_text_yes">是</string>
    <string name="button_text_no">否</string>
    <string name="button_text_login">登录</string>
    <string name="spinner_text_login">前选择用户名</string>
    <string name="password_digits">0123456789</string>
    <string name="password_error">密码错误</string>
    <string name="password_empty">密码为空</string>
    <string name="login_success">登录成功</string>
    <string name="check_activity">验票</string>
    <string name="check_way_manual_code">验证码</string>
    <string name="check_way_scan_code">二维码</string>
    <string name="check_way_idcard">身份证</string>
    <string name="check_way_idcard_input">键盘</string>
    <string name="check_way_idcard_induction">设备识别</string>
    <string name="button_text_read_idcard">读取身份证</string>
    <string name="note_insert_card_read">请插入读卡器</string>
    <string name="note_device_not_ready">设备尚未准备好</string>
    <string name="note_read_id_card_failed">读取身份证失败</string>
    <string name="note_not_found_idcard">未能找到身份证</string>
    <string name="print_test">打印测试</string>
        <string name="printer_test">打印机测试</string>
        <string name="title_koolclouddemo_detail">KoolcloudDemo Detail</string>
        <string name="app_version">应用版本号：</string>
        <string name="printer_open">打开打印机</string>
        <string name="printer_close">关闭打印机</string>
        <string name="printer_main">主打印机测试：</string>
        <string name="print_normal">普通打印</string>
        <string name="print_zoom">放大打印</string>
        <string name="print_deep">加深打印</string>
        <string name="input_print_content">请输入需要打印的内容</string>
        <string name="align_type">对齐策略:</string>
        <string name="align_center_str">剧中</string>
        <string name="align_left_str">居左</string>
        <string name="align_right_str">居右</string>
        <string name="fontsize">字体大小:</string>
        <string name="font">字体:</string>
        <string name="line_spacing">行间距</string>
        <string name="word_spacing">字间距</string>
        <string name="font_ext">附加选项:</string>
        <string name="font_normal">正常</string>
        <string name="font_bold">加粗</string>
        <string name="font_italic">斜体</string>
        <string name="font_inverse">反白</string>
        <string name="font_underline">下划线</string>
        <string name="font_width_height">宽高</string>
        <string name="font_double_width">倍宽</string>
        <string name="font_double_height">倍高</string>
        <string name="width">宽</string>
        <string name="height">高</string>
        <string name="begin_print">打印</string>
        <string name="begin_print_feed">进纸一行</string>
        <string name="print_one_barcode">打印一维条码</string>
        <string name="print_two_barcode">打印二维条码</string>
        <string name="print_image">打印图片</string>
        <string name="print_text">打印文本</string>
        <string name="master_key_id">主密钥ID:</string>
        <string name="user_key_id">工作密钥ID:</string>
        <string name="show_text">在密码键盘屏幕上显示数据</string>
        <string name="encrypt_text">加密数据</string>
        <string name="pinblock">计算pinblock</string>
        <string name="mac">计算MAC</string>
        <string name="plain">user pin：</string>
        <string name="cipher">master pin：</string>
        <string name="user">update user pin</string>
        <string name="master">更新主密钥</string>
        <string name="encrypt">加密数据</string>
        <string name="master_key">主密钥：</string>
        <string name="pinblock_key">Pinblock密钥：</string>
        <string name="mac_key">MAC密钥：</string>
        <string name="mac_type">MAC类型：</string>
        <string name="mac_data">MAC数据：</string>
        <string name="encrypt_data">待加密的数据：</string>
        <string name="text_data">要显示的数据：</string>
        <string name="update_pinblock">更新pinblock密钥</string>
        <string name="update_mac">更新MAC密钥</string>
        <string name="notice">swipe card test tool</string>
        <string name="swipcard">swipe card</string>
        <string name="open_msr_fail">打开msr失败</string>
        <string name="card_event">卡片事件：</string>
        <string name="open_reader">打开读卡器</string>
        <string name="close_reader">关闭读卡器</string>
        <string name="card_power_on">卡上电</string>
        <string name="card_power_off">卡下电</string>
        <string name="query_card">检测IC卡是否已插入</string>
        <string name="verify_pin">密码校验</string>
        <string name="input_verify_pin">请输入校验码</string>
        <string name="write_address">写入地址：</string>
        <string name="main_mem_address">主内存地址(0x00~0xFF)</string>
        <string name="protected_mem_address">保护内存地址(0x00~0x1F)</string>
        <string name="write_main_mem">写主内存</string>
        <string name="read_main_mem">读主内存</string>
        <string name="write_protected_mem">写保护内存数据固化</string>
        <string name="read_protected_mem">读保护内存数据固化</string>
        <string name="update_pin">更新密码</string>
        <string name="read_update_pin">读密码</string>
        <string name="input_main_mem">请输入主内存</string>
        <string name="input_protected_mem">请输入需要固化的数据</string>
        <string name="input_update_pin">请输入需要更新的密码</string>
        <string name="I_value_min">I值(min)：</string>
        <string name="I_value_max">I值(max)：</string>
        <string name="Q_value_min">Q值(min)：</string>
        <string name="Q_value_max">Q值(max)：</string>
        <string name="input_I_value">请输入I值</string>
        <string name="input_Q_value">请输入Q值</string>
        <string name="set_IQ_value">设置I偏值 Q偏值</string>
        <string name="search_target_begin">开始寻卡</string>
        <string name="search_target_stop">停止寻卡</string>
        <string name="sector_id">SectorId:</string>
        <string name="block_id">BlockId:</string>
        <string name="key_A">KeyA:</string>
        <string name="key_B">KeyB:</string>
        <string name="verify_card">验证卡片</string>
        <string name="write_mifare_card">写卡</string>
        <string name="read_mifare_card">读卡</string>
        <string name="save_app_root_cert">安装app root证书</string>
        <string name="del_app_root_cert">删除app root证书</string>
        <string name="save_owner_root_cert">安装owner root证书</string>
        <string name="del_owner_root_cert">删除owner root证书</string>
        <string name="save_pub_cert">安装pub证书</string>
        <string name="del_pub_cert">删除pub证书</string>
        <string name="random">随机数：</string>
        <string name="gen_random">生成随机数</string>
        <string name="start">Start</string>
        <string name="pause">Pause</string>
        <string name="stop">Stop</string>
        <string name="bookmark_picker_name">Bookmarks</string>
        <string name="button_add_calendar">Add to calendar</string>
        <string name="button_add_contact">Add contact</string>
        <string name="button_book_search">Book Search</string>
        <string name="button_cancel">Cancel</string>
        <string name="button_custom_product_search">Custom search</string>
        <string name="button_dial">Dial number</string>
        <string name="button_email">Send email</string>
        <string name="button_get_directions">Get directions</string>
        <string name="button_mms">Send MMS</string>
        <string name="button_ok">OK</string>
        <string name="button_open_browser">Open browser</string>
        <string name="button_product_search">Product search</string>
        <string name="button_search_book_contents">Search contents</string>
        <string name="button_share_app">Application</string>
        <string name="button_share_bookmark">Bookmark</string>
        <string name="button_share_by_email">Share via email</string>
        <string name="button_share_by_sms">Share via SMS</string>
        <string name="button_share_clipboard">Clipboard</string>
        <string name="button_share_contact">Contact</string>
        <string name="button_show_map">Show map</string>
        <string name="button_sms">Send SMS</string>
        <string name="button_web_search">Web search</string>
        <string name="button_wifi">Connect to Network</string>
        <string name="contents_contact">Contact info</string>
        <string name="contents_email">Email address</string>
        <string name="contents_location">Geographic coordinates</string>
        <string name="contents_phone">Phone number</string>
        <string name="contents_sms">SMS address</string>
        <string name="contents_text">Plain text</string>
        <string name="history_clear_text">Clear history</string>
        <string name="history_clear_one_history_text">Clear</string>
        <string name="history_email_title">Barcode Scanner history</string>
        <string name="history_empty">Empty</string>
        <string name="history_empty_detail">No barcode scans have been recorded</string>
        <string name="history_send">Send history</string>
        <string name="history_title">History</string>
        <string name="menu_encode_mecard">Use MECARD</string>
        <string name="menu_encode_vcard">Use vCard</string>
        <string name="menu_help">Help</string>
        <string name="menu_history">History</string>
        <string name="menu_settings">Settings</string>
        <string name="menu_share">Share</string>
        <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
        <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
        <string name="msg_default_format">Format</string>
        <string name="msg_default_meta">Metadata</string>
        <string name="msg_default_mms_subject">Hi</string>
        <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
        <string name="msg_default_time">Time</string>
        <string name="msg_default_type">Type</string>
        <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
        <string name="msg_google_books">Google</string>
        <string name="msg_google_product">Google</string>
        <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
        <string name="msg_redirect">Redirect</string>
        <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
        <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
        <string name="msg_sbc_no_page_returned">No page returned</string>
        <string name="msg_sbc_page">Page</string>
        <string name="msg_sbc_results">Results</string>
        <string name="msg_sbc_searching_book">Searching book\u2026</string>
        <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
        <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
        <string name="msg_share_text">Or type some text and press Enter</string>
        <string name="msg_sure">Are you sure?</string>
        <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
        <string name="preferences_actions_title">When a barcode is found\u2026</string>
        <string name="preferences_auto_focus_title">Use auto focus</string>
        <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
        <string name="preferences_bulk_mode_title">Bulk scan mode</string>
</resources>