<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_save_app_root_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_app_root_cert" />

    <Button
        android:id="@+id/button_del_app_root_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_save_app_root_cert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/del_app_root_cert" />

    <Button
        android:id="@+id/button_save_owner_root_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_del_app_root_cert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_owner_root_cert" />

    <Button
        android:id="@+id/button_del_owner_root_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_save_owner_root_cert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/del_owner_root_cert" />

    <Button
        android:id="@+id/button_save_pub_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_del_owner_root_cert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save_pub_cert" />

    <Button
        android:id="@+id/button_del_pub_cert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_save_pub_cert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/del_pub_cert" />

</RelativeLayout>