<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.zxing.client.android.ScannerRelativeLayout
        android:id="@+id/scanner"
        android:layout_width="400dp"
        android:layout_height="400dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanner"
        android:text="@string/start" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanner"
        android:layout_toRightOf="@+id/start"
        android:text="@string/pause" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanner"
        android:layout_toRightOf="@+id/pause"
        android:text="@string/stop" />

</RelativeLayout>